--- a/style.css
+++ b/style.css
@@ -59,6 +59,14 @@ main{
 
 main .imagem img{
     width: 400px;
+    animation: float 1.8s infinite alternate;
+}
+
+.sombra{
+    width: 390px;
+    height: 45px;
+    background: hsla(38, 21%, 19%, .16);
+    border-radius: 50%;
 }
 
 main .text p{
@@ -88,3 +96,13 @@ main .botao button:hover{
     background-color: #15442b;
     transition: all 0.5s;
 }
+
+@keyframes float {
+    0%{
+        transform: translatey(0);
+    }
+    100%{
+        transform: translatey(15px);
+    }
+}
+
